--- a/test_args_analyse_tools/test_args_analyse_tools.vcxproj.filters
+++ b/test_args_analyse_tools/test_args_analyse_tools.vcxproj.filters
@@ -15,20 +15,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cmd_console_tools.h">
+    <ClInclude Include="..\include\class_aat.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="menu.h">
+    <ClInclude Include="..\include\lib_aat_tools.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="com_console.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="cmd_hdc_tools.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="lib_thdc_tools.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\lib\lib_common_tools.lib">
+      <Filter>资源文件</Filter>
+    </Library>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\common\class_aat.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="test_args_analyse_tools.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
