--- a/90-01-b2/90-01-b2.vcxproj
+++ b/90-01-b2/90-01-b2.vcxproj
@@ -139,7 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\common\cmd_console_tools.cpp" />
+    <ClCompile Include="..\common\com_console.cpp" />
+    <ClCompile Include="..\common\menu.cpp" />
+    <ClCompile Include="90-01-b2-base.cpp" />
+    <ClCompile Include="90-01-b2-console.cpp" />
     <ClCompile Include="90-01-b2-main.cpp" />
+    <ClCompile Include="90-01-b2-tools.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\include\cmd_console_tools.h" />
+    <ClInclude Include="..\include\com_console.h" />
+    <ClInclude Include="..\include\menu.h" />
+    <ClInclude Include="90-01-b2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
