--- a/90-02-b1/90-02-b1.vcxproj
+++ b/90-02-b1/90-02-b1.vcxproj
@@ -140,10 +140,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\common\cmd_console_tools.cpp" />
+    <ClCompile Include="..\common\com_console.cpp" />
+    <ClCompile Include="..\common\menu.cpp" />
+    <ClCompile Include="90-02-b1-base.cpp" />
+    <ClCompile Include="90-02-b1-console.cpp" />
     <ClCompile Include="90-02-b1-main.cpp" />
+    <ClCompile Include="90-02-b1-tools.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\cmd_console_tools.h" />
+    <ClInclude Include="..\include\com_console.h" />
+    <ClInclude Include="..\include\menu.h" />
+    <ClInclude Include="90-02-b1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
