--- a/common/common.vcxproj
+++ b/common/common.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cmd_console_tools.cpp" />
+    <ClCompile Include="cmd_hdc_tools.cpp" />
+    <ClCompile Include="com_console.cpp" />
+    <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
