截止至第六次大作业readcfg
12.22

--- a/common/common.vcxproj.filters
+++ b/common/common.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="cmd_hdc_tools.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="bitmap_image.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="class_aat.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="class_crt.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
