--- a/common/common.vcxproj
+++ b/common/common.vcxproj
@@ -139,6 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bitmap_image.cpp" />
+    <ClCompile Include="class_aat.cpp" />
+    <ClCompile Include="class_crt.cpp" />
     <ClCompile Include="cmd_console_tools.cpp" />
     <ClCompile Include="cmd_hdc_tools.cpp" />
     <ClCompile Include="com_console.cpp" />
