--- a/test_readcfg/test_readcfg.vcxproj
+++ b/test_readcfg/test_readcfg.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{618cd706-1b69-4f02-8b1b-7011e17dc9e0}</ProjectGuid>
-    <RootNamespace>include</RootNamespace>
+    <ProjectGuid>{c0373d3c-5cbb-48b9-af34-7870c299a8d9}</ProjectGuid>
+    <RootNamespace>testreadcfg</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,18 +70,6 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -139,15 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="bitmap_image.h" />
-    <ClInclude Include="class_aat.h" />
-    <ClInclude Include="class_crt.h" />
-    <ClInclude Include="cmd_console_tools.h" />
-    <ClInclude Include="cmd_hdc_tools.h" />
-    <ClInclude Include="com_console.h" />
-    <ClInclude Include="lib_aat_tools.h" />
-    <ClInclude Include="lib_thdc_tools.h" />
-    <ClInclude Include="menu.h" />
+    <ClInclude Include="..\include\class_aat.h" />
+    <ClInclude Include="..\include\class_crt.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\common\class_aat.cpp" />
+    <ClCompile Include="..\common\class_crt.cpp" />
+    <ClCompile Include="test_readcfg.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
